welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:36: error: ')' expected but 'for' found.
  for(a<-1 to getMondeHauteur()-1){
  ^